# IAA-Seminario1

./: .gitignore  ModeladoBot.xdsl  README.md  bibliography.bib  bot.py  informe.typ  pyproject.toml  template.typ
.github/workflows/: build.yaml
assets/: ModeladoBot.xdsl
docs/: informe.typ  template.typ
iaa_seminario1/: __main__.py
iaa_seminario1/assets/: ModeladoBot-aprendizaje.xdsl
iaa_seminario1/license/: __init__.py
