[tool.poetry]
name = "iaa-seminario1"
version = "0.1.0"
description = ""
authors = ["Pablo Hernández <17086478+Hadronomy@users.noreply.github.com>"]
# readme = "README.md"

[[tool.poetry.source]]
name = "pysmile"
url = "https://support.bayesfusion.com/pysmile-A"
priority = "supplemental"

[tool.poetry.dependencies]
python = "3.10.*"
pysmile = { version = "^2.2.0", source = "pysmile" }
typer = { version = "^0.9.0", extras = ["all"] }
inquirerpy = "^0.3.4"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
